[tool.poetry]
name = "ChaosEngine-Web"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = ">=3.10"
Flask = "^2.1.3"
mysqlclient = "^2.1.1"
Flask-MySQLdb = "^1.0.1"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
debugpy = "^1.6.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"